fix: Navigation links on mobile display correctly

--- a/css/shared/navigation.css
+++ b/css/shared/navigation.css
@@ -2,8 +2,16 @@
   align-items: center;
   display: flex;
   font-size: 1.2rem;
-  gap: 4rem;
+  flex-direction: column;
+  gap: 2rem;
   padding: 2rem 0;
+}
+
+@media (min-width: 768px) {
+  .navigation {
+    flex-direction: row;
+    gap: 4rem;
+  }
 }
 
 .navigation a {
